--- a/MobileAppP1/app/src/main/AndroidManifest.xml
+++ b/MobileAppP1/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".AdminPage"/>
         <activity android:name=".RegisterPage"/>
         <activity android:name=".UserHomePage"/>
+        <activity android:name=".AddProductReview"/>
     </application>
 
 </manifest>
